 15-Jan-2021  V1.655 Back out Protein/NA/Oligosaccharide selected polymer type for now
 16-Jan-2021  V1.656 Further enumeration updates for polymer types.
 28-Jan-2021  V1.657 RSRCC -> RSCC
 29-Jan-2021  V1.658 Expose OpenEye SMILES descriptors as RCSB descriptors
 30-Jan-2021  V1.659 Update rcsb.utils.taxonomy dependency to add fallback capability
 12-Feb-2021  V1.660 Add ligand validation score and generation category rcsb_nonpolymer_instance_validation_score
 15-Feb-2021  V1.661 Split out dictionary methods repository tools into rcsb.utils.dictionary and rcsb.utils.repository
 21-Feb-2021  V1.662 Integrating latest rcsb.utils.dictionary and rcsb.utils.repository.
 22-Feb-2021  V1.663 Further integration adjustments for rcsb.utils.dictionary.
 25-Feb-2021  V1.664 Update dependencies and pipeline config
  7-Mar-2021  V1.666 Handle inconsistent superseding data in repository holdings.
 12-Mar-2021  V1.667 Add separate processing of pdb-format update list inventory.
 18-Mar-2021  V1.668 Add support for embedded iterables within subcategory aggregates, add additional_properties
                     feature categories.
  7-Apr-2021  V1.669 Updates for corrections in DictionaryAPI() method name getFullDescendentList()
 28-Apr-2021  V1.670 Add content type for mmCIF format validation data
  4-May-2021  V1.671 Remove deprecated schema attribute rcsb_nested_indexing_context.context_attributes.search_paths
 19-May-2021  V1.673 Update dependencies in rcsb.utils.dictionary
 27-May-2021  V1.674 Update dependencies to rcsb.utils.dictionary
  2-Jun-2021  V1.675 Update dependencies to rcsb.utils.dictionary and diagnostic output
  3-Jun-2021  V1.676 Setting long description format to markdown - update pipeline config again
  5-Jun-2021  V1.677 Prune test cases
 10-Jun-2021  V1.679 Update dependencies to rcsb.utils.dictionary
 26-Jul-2021  V1.680 Update dependencies to rcsb.utils.dictionary, pipeline configuration, and example configuration